# igvc-ros2-ws

./: .gitignore  README.md  gps_setup_notes.txt  ping_pong
docs/: JETSON_HANDOFF_AND_NAV2.md  TURTLEBOT3_OPENCR_SETUP_CHAT_SUMMARY.md
scripts/: opencr_jetson_flash_burger.sh  opencr_laptop_setup_helper.sh  setup_ros_env.bash  verify_turtlebot3_base.sh
src/igvc_robot/: package.xml  setup.cfg  setup.py
src/igvc_robot/config/: encoder_bridge.yaml  global_ekf.yaml  local_ekf.yaml  navsat_transform.yaml  turtlebot3_burger.yaml
src/igvc_robot/igvc_robot/: __init__.py  encoder_bridge.py
src/igvc_robot/launch/: encoders.launch.py  localization.launch.py  turtlebot3_base.launch.py  turtlebot3_localization.launch.py
src/igvc_robot/resource/: igvc_robot
src/sllidar_ros2/launch/: view_sllidar_s1_tcp_launch.py
src/ublox/: README.md
src/ublox/ublox_gps/: CMakeLists.txt
src/ublox/ublox_gps/config/: neo_f10n_no_rtk.yaml
src/ublox/ublox_gps/launch/: neo_f10n.launch.py  neo_f10n_nmea.launch.py
