<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>igvc_robot</name>
  <version>0.1.0</version>
  <description>IGVC robot integration package for TurtleBot3/OpenCR bringup and localization.</description>
  <maintainer email="igvc@example.com">IGVC Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_node</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
